--- a/.github/workflows/build_windows_exe2.yml
+++ b/.github/workflows/build_windows_exe2.yml
@@ -35,6 +35,6 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: dist/CheckRoyalCaribbeanPrice.exe
+          asset_path: D:\a\CheckRoyalCaribbeanPrice\CheckRoyalCaribbeanPrice\dist\CheckRoyalCaribbeanPrice.exe
           asset_name: CheckRoyalCaribbeanPrice.exe
           asset_content_type: application/exe
