Check watch list items for each person in a booking and include name and room in the output.
Do not output anything if watchlist has no payload

When alerting to book a watch item, create a URL that goes directly to the booking for the product.

Added enabled field

Added blurb to README to describe how to use the watch list.

Added __pycache__ to .gitignore

--- a/SAMPLE-config.yaml
+++ b/SAMPLE-config.yaml
@@ -4,11 +4,12 @@ accountInfo: # Optional, Only needed if you want to check your own cruise addons
 cruises: # Optional, Only needed if you want to check cruise price
   - cruiseURL: "https://www.royalcaribbean.com/checkout/guest-info?sailDate=2025-12-27&shipCode=VI&groupId=VI12BWI-753707406&packageCode=VI12L049&selectedCurrencyCode=USD&country=USA&cabinClassType=OUTSIDE&roomIndex=0&r0a=2&r0c=0&r0b=n&r0r=n&r0s=n&r0q=n&r0t=n&r0d=OUTSIDE&r0D=y&rgVisited=true&r0C=y&r0e=N&r0f=4N&r0g=BESTRATE&r0h=n&r0j=2138&r0w=2&r0B=BD&r0x=AF&r0y=6aa01639-c2d8-4d52-b850-e11c5ecf7146"
     paidPrice: "3833.74"
-#watchList: # Optional, items to monitor for price drops across all your bookings
-#  - name: "Deluxe Beverage Package"
-#    prefix: "pt_beverage"  # Category prefix
-#    product: "3005"        # Product ID
-#    price: 85.00           # Alert if current price drops below this amount
+watchList: # Optional, items to monitor for price drops across all your bookings
+  - name: "Deluxe Beverage Package"
+    prefix: "pt_beverage"  # Category prefix
+    product: "3005"        # Product ID
+    price: 85.00           # Alert if current price drops below this amount
+    enabled: false         # if false, skip this item for watching. true to include
 apprise:  # Optional, see https://github.com/caronc/apprise, can have as many lines as you want.
   - url: "mailto://user:password@gmail.com"
   - url: "whatsapp://AccessToken@FromPhoneID/ToPhoneNo"
