--- a/SAMPLE-config.yaml
+++ b/SAMPLE-config.yaml
@@ -5,6 +5,7 @@ cruises: # Optional, Only needed if you want to check cruise price
   - cruiseURL: "https://www.royalcaribbean.com/checkout/guest-info?sailDate=2025-12-27&shipCode=VI&groupId=VI12BWI-753707406&packageCode=VI12L049&selectedCurrencyCode=USD&country=USA&cabinClassType=OUTSIDE&roomIndex=0&r0a=2&r0c=0&r0b=n&r0r=n&r0s=n&r0q=n&r0t=n&r0d=OUTSIDE&r0D=y&rgVisited=true&r0C=y&r0e=N&r0f=4N&r0g=BESTRATE&r0h=n&r0j=2138&r0w=2&r0B=BD&r0x=AF&r0y=6aa01639-c2d8-4d52-b850-e11c5ecf7146"
     paidPrice: "3833.74"
 displayCruisePrices: true
+minimumSavingAlert: 1.00 # Optional, only alert when savings are >= this amount, can be helpful when currency fluctuations cause small price changes in non-USD prices 
 reservationPricePaid:
   '1234567': 3989.48
   '7654321': 2368.38
